# image_stitching

./: .gitignore  CMakeLists.txt  README.md  resize.ipynb  stitching.cpp
baseline_frame/: helpers.cpp  hw4_challenge1.cpp  hw4_challenge1.h  hw4_project  main.cpp
benchmarking/: benchmarking.py  plots.py
benchmarking/results/: result.ipynb  stitcher_times_baseline.csv  stitcher_times_gpu.csv  stitcher_times_openmp1.csv  stitcher_times_openmp128.csv  stitcher_times_openmp16.csv  stitcher_times_openmp2.csv  stitcher_times_openmp32.csv  stitcher_times_openmp4.csv  stitcher_times_openmp64.csv  stitcher_times_openmp8.csv
previous_work/baseline_frame/: Makefile  helpers.h  runTests.cpp
previous_work/python/: readme.md  run.py  stitch_img.py
previous_work/solution2_convert/: assignment4_challenge1.cpp  assignment4_challenge1.hpp  helpers.cpp  runHw4  runHw4.cpp
python/: requirements.txt  runHw4.py  stitch_img.py  stitch_panorama  stitch_panorama.cpp
solution1_opencv_stiching/: stitch_panorama  stitch_panorama.cpp
solution2_convert/: helpers.h  runTests.h
src/: base_stitching.cpp  base_stitching_main.cpp  benchmark.cpp  gpu_stitching.cpp  gpu_stitching_main.cpp  openmp_stitching.cpp  openmp_stitching_main.cpp  stitching_main.cpp
src/include/: base_stitching.h  gpu_stitching.h  openmp_stitching.h
